# renderbase-rs

./: Cargo.toml  README.md
src/: filter.rs  lib.rs  raster.rs  rectangle.rs  renderer.rs  sampler.rs
src/filter/: box.rs  gaussian.rs  lanczos_sinc.rs  mitchell.rs  triangle.rs
src/renderer/: multithreaded.rs  simple.rs
src/sampler/: independent.rs  stratified.rs
