[package]
name = "renderbase"
version = "0.1.0"
authors = ["Jesper de Jong <jespdj@gmail.com>"]
edition = "2018"
description = "RenderBase: A framework for multi-threaded graphics rendering."
readme = "README.md"
repository = "https://github.com/jesperdj/renderbase-rs"
license-file = "LICENSE"

[lib]
doctest = false

[dependencies]
log = "0.4.11"
rand = "0.7.3"
rand_xoshiro = "0.4.0"
num_cpus = "1.13.0"
crossbeam-channel = "0.4.3"
crossbeam-utils = "0.7.2"
