[package]
name = "renderbase"
version = "0.1.0"
authors = ["Jesper de Jong <jespdj@gmail.com>"]
edition = "2018"
description = "RenderBase: A framework for multi-threaded graphics rendering."
readme = "README.md"
repository = "https://github.com/jesperdj/renderbase-rs"
license-file = "LICENSE"

[lib]
doctest = false

[dependencies]
log = "0.4.17"
rand = "0.8.5"
rand_xoshiro = "0.6.0"
num_cpus = "1.13.1"
crossbeam-channel = "0.5.4"
crossbeam-utils = "0.8.8"
