[package]
name = "renderbase"
version = "0.2.0"
authors = ["Jesper de Jong <jespdj@gmail.com>"]
edition = "2021"
description = "RenderBase: A framework for multi-threaded graphics rendering."
readme = "README.md"
repository = "https://github.com/jesperdj/renderbase-rs"
license-file = "LICENSE"

[lib]
doctest = false

[dependencies]
log = "0.4"
rand = "0.8"
rand_xoshiro = "0.6"
num_cpus = "1.16"
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
